# mlancala

./: README.md  dune-project  mancala.opam
src/: dune  mancala.ml  mancala.mli
test/: dune  test_mancala.ml
