(lang dune 3.16)

(name mancala)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Ross Paine")

(maintainers "Ross Paine")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name mancala)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
